# data-engineering-learnings

grigorii-tishchuk/: Makefile  README.md  pyproject.toml
grigorii-tishchuk/dags/: analysis_dag.py
grigorii-tishchuk/data/: Espooaluetietoa2022.csv  Espooaluetietoa2022.xlsx
grigorii-tishchuk/notebooks/: analysis.ipynb
grigorii-tishchuk/scripts/: run_notebook.py
